data/derived/comb/progs/unify/prog4001.ml.out
Characters 77-93:
  | head::tail -> listReverse tail ::[head];;
                  ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
